force-app/main/default/objects/Opportunity/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank vs Accounting</fullName>
                <color>#FFCC66</color>
                <label>Bank vs Accounting</label>
            </value>
            <value>
                <fullName>ERP vs OS</fullName>
                <color>#FFCC66</color>
                <label>ERP vs OS</label>
            </value>
            <value>
                <fullName>EUCs</fullName>
                <color>#FFCC66</color>
                <label>EUCs</label>
            </value>
            <value>
                <fullName>Dispersals</fullName>
                <color>#3366FF</color>
                <label>Dispersals</label>
            </value>
            <value>
                <fullName>Transaction Cost Control</fullName>
                <color>#66FF99</color>
                <label>Transaction Cost Control</label>
            </value>
            <value>
                <fullName>Debt Control Insurance Broker</fullName>
                <color>#66FF99</color>
                <label>Debt Control Insurance Broker</label>
            </value>
            <value>
                <fullName>Multiple Payment Methods</fullName>
                <color>#66FF99</color>
                <label>Multiple Payment Methods</label>
            </value>
            <value>
                <fullName>Account Classification</fullName>
                <color>#FFCC66</color>
                <label>Account Classification</label>
            </value>
            <value>
                <fullName>Network Acquirer Reconciliation</fullName>
                <color>#66FF99</color>
                <label>Network Acquirer Reconciliation</label>
            </value>
            <value>
                <fullName>Bank Reconciliation</fullName>
                <color>#66FF99</color>
                <label>Bank Reconciliation</label>
            </value>
            <value>
                <fullName>Payments</fullName>
                <color>#3366FF</color>
                <label>Payments</label>
            </value>
            <value>
                <fullName>Costs Control</fullName>
                <color>#3366FF</color>
                <label>Costs Control</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#DDDDDD</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Accounting Translator</fullName>
                <isActive>false</isActive>
                <label>Accounting Translator</label>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Cash Network</fullName>
                <isActive>false</isActive>
                <label>Cash Network</label>
            </value>
            <value>
                <fullName>Cash Networks</fullName>
                <isActive>false</isActive>
                <label>Cash Networks</label>
            </value>
            <value>
                <fullName>Chargebacks</fullName>
                <isActive>false</isActive>
                <label>Chargebacks</label>
            </value>
            <value>
                <fullName>Consignment</fullName>
                <isActive>false</isActive>
                <label>Consignment</label>
            </value>
            <value>
                <fullName>Other Wallets</fullName>
                <isActive>false</isActive>
                <label>Other Wallets</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <isActive>false</isActive>
                <label>Refund</label>
            </value>
            <value>
                <fullName>White Label Recon Report</fullName>
                <isActive>false</isActive>
                <label>White Label Recon Report</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>