force-app/main/default/objects/Opportunity/fields/Use_Cases_Customer_Builder_s__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases_Customer_Builder_s__c</fullName>
    <description>Who will be the person (s) in charge of building the use cases in the tool?</description>
    <inlineHelpText>Who will be the person (s) in charge of building the use cases in the tool?</inlineHelpText>
    <label>Use Cases Customer Builder(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>