force-app/main/default/objects/Opportunity/fields/Usecase__c.field-meta.xml
<CustomField>
    <fullName>Usecase__c</fullName>
    <label>Usecase</label>
    <summaryForeignKey>Use_Case__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>