force-app/main/default/objects/Opportunity/fields/Value_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Value_Drivers__c</fullName>
    <description>● These are the things that the prospect is likely proactively looking for or needing
● These are generally revenue, cost, or risk related
● These are top-of-mind customer topics that exist even if Simetrik doesn’t
● They could cause a buyer to re-allocate discretionary funds
● They support a value-based conversation (mutually exclusive, collectively
exhaustive)</description>
    <inlineHelpText>Select the Value Drivers that are driving the deal</inlineHelpText>
    <label>Value Drivers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerate Financial Close</fullName>
            </value>
            <value>
                <fullName>Control Complex &amp; Dynamic Financial Operations</fullName>
            </value>
            <value>
                <fullName>Enable Data-driven Insights &amp; Decisions</fullName>
            </value>
            <value>
                <fullName>Ensure &amp; Support Regulatory Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>