force-app/main/default/objects/Opportunity/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>Account.Vertical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA Vertical</label>
    <type>Text</type>
</CustomField>