force-app/main/default/objects/Opportunity/fields/What_can_view_Partner__c.field-meta.xml
<CustomField>
    <fullName>What_can_view_Partner__c</fullName>
    <formula>IF( $User.ProfileId = &quot;00eQo000001gdAr&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What can view Partner</label>
    <type>Checkbox</type>
</CustomField>