force-app/main/default/objects/Opportunity/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>false</active>
    <businessProcess>1%2E Lead</businessProcess>
    <label>1. Lead</label>
</RecordType>