force-app/main/default/objects/Opportunity/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>false</active>
    <businessProcess>2%2E Prospect</businessProcess>
    <label>2. Prospect</label>
</RecordType>