force-app/main/default/objects/Opportunity/recordTypes/Utility_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Utility_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Utility Opportunities</businessProcess>
    <description>For use with opportunities for Utility customers</description>
    <label>Utility Opportunity</label>
</RecordType>