force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason</fullName>
    <active>true</active>
    <description>Need a Closed Lost Reason before moving an opportunity to closed lost</description>
    <errorConditionFormula>AND( ISPICKVAL( StageName , &quot;Lost&quot;) ,  
   (ISBLANK( TEXT(Close_not_won_cause__c ))))</errorConditionFormula>
    <errorMessage>Please note a Closed Lost Reason before moving an opportunity to Closed Lost</errorMessage>
</ValidationRule>