force-app/main/default/objects/Opportunity/validationRules/Minimum_Contract_Duration_for_Multi_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Contract_Duration_for_Multi_Year</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Has_Multi_Year_Contract__c = TRUE,  Total_Contract_Duration_in_Months__c &lt;24)</errorConditionFormula>
    <errorDisplayField>Total_Contract_Duration_in_Months__c</errorDisplayField>
    <errorMessage>Contract Duration must be greater than or equal to 24 months.</errorMessage>
</ValidationRule>