force-app/main/default/objects/Opportunity/validationRules/No_Future_Close_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Close_Dates</fullName>
    <active>true</active>
    <description>Validates that the close date is not in the future</description>
    <errorConditionFormula>AND( CloseDate  &gt;  TODAY(), 
      OR( ISPICKVAL( StageName , &quot;Won&quot;) ,
          ISPICKVAL( StageName , &quot;Lost&quot;)) )</errorConditionFormula>
    <errorMessage>Opportunity close date cannot be later than today</errorMessage>
</ValidationRule>