force-app/main/default/objects/Opportunity/validationRules/No_Zero_Value_Pipeline.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Zero_Value_Pipeline</fullName>
    <active>true</active>
    <description>Does not allow a user to save a pipeline Opportunity unless it has a value.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(StageName, &quot;0 - Research&quot;)),
    NOT(ISPICKVAL(StageName, &quot;Lost&quot;)), 
    ISBLANK(ACV__c)
)</errorConditionFormula>
    <errorMessage>Please add a quote to the Opportunity. We cannot have pipeline Opportunities without a value.</errorMessage>
</ValidationRule>