force-app/main/default/objects/Opportunity/validationRules/Only_Admins_Open_Closed_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admins_Open_Closed_Opps</fullName>
    <active>false</active>
    <errorConditionFormula>AND( CloseDate &lt; TODAY(), 
   OR(NOT( ISPICKVAL( StageName , &quot;Won&quot;)) ,
      NOT(ISPICKVAL( StageName , &quot;Lost&quot;))), 
      NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Only a System Administrator can open a closed opportunity</errorMessage>
</ValidationRule>