force-app/main/default/objects/Opportunity/listViews/Adel_Malas.listView-meta.xml
<ListView>
    <fullName>Adel_Malas</fullName>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.WON</columns>
    <columns>OPPORTUNITY.CLOSED</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>garcia</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Opportunity</value>
    </filters>
    <label>Greg Garcia</label>
</ListView>