force-app/main/default/objects/Opportunity/listViews/All_Opportunities_CS.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_CS</fullName>
    <columns>Opp_CSM__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>SaaS_MRR__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Country__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Invoice_Date__c</columns>
    <columns>ACV__c</columns>
    <columns>MRR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>0 - Research,1 - Discovery,2 - Scoping,3 - Consensus,4 - Negotiation,5 - Redlining,Won</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>CS - Customer Referral,CS - Event,CS - Internal Referral</value>
    </filters>
    <filters>
        <field>What_can_view_Partner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Opportunities - CS</label>
</ListView>