force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Account_Type__c</columns>
    <columns>Industries__c</columns>
    <columns>Category__c</columns>
    <columns>SaaS_MRR__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>Country__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>Revenue_Type__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>0 - Research</value>
    </filters>
    <label>All Opportunities</label>
</ListView>