force-app/main/default/objects/Opportunity/listViews/BDR_owners.listView-meta.xml
<ListView>
    <fullName>BDR_owners</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>sara,federico,sebastian,barbara,pablo,ivan,adriana</value>
    </filters>
    <filters>
        <field>What_can_view_Partner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>BDR owners</label>
</ListView>