force-app/main/default/objects/Opportunity/listViews/Close_Dates_in_the_past.listView-meta.xml
<ListView>
    <fullName>Close_Dates_in_the_past</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.FORECAST_CATEGORY</field>
        <operation>equals</operation>
        <value>Pipeline,Best Case,Commit</value>
    </filters>
    <filters>
        <field>What_can_view_Partner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Close Dates in the past</label>
</ListView>