force-app/main/default/objects/Opportunity/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Real_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>What_can_view_Partner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Closed</label>
</ListView>