force-app/main/default/objects/Opportunity/listViews/Commit.listView-meta.xml
<ListView>
    <fullName>Commit</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>SaaS_MRR__c</columns>
    <columns>MRR__c</columns>
    <columns>ARR__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.FORECAST_CATEGORY</field>
        <operation>equals</operation>
        <value>Commit</value>
    </filters>
    <filters>
        <field>What_can_view_Partner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Commit</label>
</ListView>