force-app/main/default/objects/Opportunity/listViews/CSQO.listView-meta.xml
<ListView>
    <fullName>CSQO</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Account_Type__c</columns>
    <columns>Industries__c</columns>
    <columns>Category__c</columns>
    <columns>SaaS_MRR__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>Country__c</columns>
    <columns>Revenue_Type__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>0 - Research,1 - Discovery,2 - Scoping,3 - Consensus,4 - Negotiation,5 - Redlining</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>CS - Customer Referral,CS - Event,CS - Internal Referral</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>Renewal,Upsell</value>
    </filters>
    <filters>
        <field>What_can_view_Partner__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CS - CSQO</label>
</ListView>