force-app/main/default/objects/Opportunity/listViews/HP_Opportunities.listView-meta.xml
<ListView>
    <fullName>HP_Opportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Country__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Services__c</columns>
    <columns>Industries__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>Account_Type__c</columns>
    <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>MRR__c</columns>
    <columns>ARR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>High Potential</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>0 - Research,1 - Discovery,2 - Scoping,3 - Consensus,4 - Negotiation,5 - Redlining,Won,Lost</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2023</value>
    </filters>
    <label>HP Opportunities</label>
</ListView>